# lewagon_data_engineering_final_delivery

./: .gitignore  README.md  pyproject.toml
dbt_linkedin_etl_project/: .gitignore  dbt_project.yml
dbt_linkedin_etl_project/models/: clean_job_title_data.sql  fix_city_name.SQL  fix_locations.SQL  fix_state_name.SQL  schema.yml
dbt_linkedin_etl_project/models/Intermediary/: int_linkedin_data.sql  int_linkedin_job_links.sql  int_total_jobs_by_city.sql  int_total_jobs_by_org.sql  int_total_jobs_by_state.sql  int_total_jobs_by_type.sql  int_total_jobs_daily.sql  schema.yaml
dbt_linkedin_etl_project/models/base/: base_city.sql  base_state.sql  schema.yml
dbt_linkedin_etl_project/models/marts/: mart_total_jobs_by_city.sql  mart_total_jobs_by_org.sql  mart_total_jobs_by_state.sql  mart_total_jobs_by_type.sql  mart_total_jobs_daily.sql  mart_total_jobs_wow_trend.sql  schema.yaml
dbt_linkedin_etl_project/models/raw/: city.sql  schema.yml  state.sql
linkedin_api_data_extraction/: deepseek_job_description_analysis.ipynb  deepseek_job_seniority.ipynb  gpt_job_description_analysis.ipynb  gpt_job_seniority_process copy.ipynb  gpt_job_seniority_process.ipynb  linkedin_api_raw_data.ipynb  linkedin_api_raw_data_process.ipynb  linkedin_api_raw_data_process.py  linkedin_api_raw_data_process_notupdated.py
